--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -52,6 +52,109 @@
 <script type="text/javascript">amzn_assoc_placement = "adunit0";amzn_assoc_tracking_id = "3628-20";amzn_assoc_ad_mode = "search";amzn_assoc_ad_type = "smart";amzn_assoc_marketplace = "amazon";amzn_assoc_region = "US";amzn_assoc_default_search_phrase = "Case and Stand for 9.7-inch iPad Pro";amzn_assoc_default_category = "All";amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";amzn_assoc_title = "Shop Related Products";amzn_assoc_rows = "5";amzn_assoc_design = "text_links";</script>
     <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script> -->
 
+<div class="card dealofday clearfix" data-score="62" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/316iWkr"><img src="https://images-na.ssl-images-amazon.com/images/I/71EQcvslvBL._AC_SR300,300_.jpg" alt="Amazon Deal Of The Day" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>Up to 62% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href=""><span>Amazon Deal Of The Day:</span> Save Up to 62% on popular strategy board games
+</a></p>
+    <div class="code_high">
+      <ul>
+        <li>
+          <p>Category</p>
+          <ul>
+            <li><a target="_blank" href="https://amzn.to/338YEsG">Cryptozoic Entertainment DC Deck-Building Game</a> - <span>19.87<em>44.99</em></span></li>
+            <li><a target="_blank" href="https://amzn.to/2K2cwgB">Ultimate Werewolf Deluxe Edition</a> - <span>9.38<em>24.99</em></span></li>
+            <li><a target="_blank" href="https://amzn.to/2LKddgV">IELLO King of New York Board Game</a> - <span>28.61<em>49.99</em></span></li>
+            <li><a href="https://amzn.to/316iWkr">- SEE MORE</a></li>
+          </ul>
+        </li>
+       </ul>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/316iWkr">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card dealofday clearfix" data-score="55" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30Zgyfx"><img src="https://images-na.ssl-images-amazon.com/images/I/71o7QZah28L._AC_SR300,300_.jpg" alt="Amazon Deal Of The Day" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>Up to 55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href=""><span>Amazon Deal Of The Day:</span> Save up to 55% off on LILLEbaby Baby Carriers</a></p>
+    <div class="code_high">
+      <ul>
+        <li>
+          <p>Category</p>
+          <ul>
+            <li><a target="_blank" href="https://amzn.to/30WvL0K">LILLEbaby SIX-Position, 360° Ergonomic Baby...</a> - <span>76.99<em>139.99</em></span></li>
+            <li><a target="_blank" href="https://amzn.to/2LMfCri">LÍLLÉbaby The Complete All Seasons SIX-Position...</a> - <span>104.99<em>149.99</em></span></li>
+            <li><a target="_blank" href="https://amzn.to/2YtAky1">LILLEbaby Ergonomic Baby & Child Carrier...</a> - <span>83.99<em>139.99</em></span></li>
+            <li><a href="https://amzn.to/30Zgyfx">- SEE MORE</a></li>
+          </ul>
+        </li>
+       </ul>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30Zgyfx">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="71" data-price="37.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LMgfkE"><img src="https://images-na.ssl-images-amazon.com/images/I/613OI7YttwL._SX679_.jpg" alt="Crosstour Action Camera" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>79 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>71% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LMgfkE">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$37.39</span><span class="ori_price">$129.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LMgfkE">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="64" data-price="25.15">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SObrvA"><img src="https://images-na.ssl-images-amazon.com/images/I/91TBNEBXK0L._SX679_.jpg" alt="Solar Lantern Lights" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>187 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>64% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SObrvA">Solar Lantern Lights Dancing Flame Waterproof Outdoor Hanging Lantern Solar Powered Umbrella LED Night Lights>...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$25.15</span><span class="ori_price">$69.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2SObrvA">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="29" data-price="24.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LM7Iy3"><img src="https://images-na.ssl-images-amazon.com/images/I/81udlGgmkjL._SX679_.jpg" alt="ChomChom Roller Dog Hair" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>4,356 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LM7Iy3">ChomChom Roller Dog Hair, Cat Hair, Pet Hair Remover</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.95</span><span class="ori_price">$34.99</span></address>
+      <%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LM7Iy3">Shop Now at Amazon</a></div>
+</div>
 
 <div class="card dealofday clearfix" data-score="35" data-price="discounted_price">
   <div class="image_box">
