--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -90,7 +90,7 @@
 
     
     </div><!--./codes-->
-    <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button>
+    <!-- <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button> -->
   </div><!--./warp-->
 </div><!--./layout-->
 <script>
