--- a/app/views/deals/coupons.html.erb
+++ b/app/views/deals/coupons.html.erb
@@ -34,7 +34,7 @@
       </div><!--./rt_cnt-->
     
     </div><!--./coupons-->
-    <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button>
+    <!-- <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button> -->
   </div><!--./wrap-->
 </div><!--./layout-->
 <script>
