--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -104,7 +104,7 @@
         </div><!--./rt_cnt-->    
 
      </div><!--./codes-->
-    <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button>
+    <!-- <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button> -->
   </div>
 </div>
 
