--- a/app/views/deals/sneakers01W.html.erb
+++ b/app/views/deals/sneakers01W.html.erb
@@ -215,7 +215,7 @@
 
     </div><!--./shoes-->
  
-  <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button>
+  <!-- <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button> -->
   </div><!--./warp-->
 </div><!--./layout-->
 <script>
