--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -4,6 +4,7 @@
 
     <div class="contact_form">
       <h1>Contact Us</h1>
+      <p>Get a question? Get in touch with us!</p>
       <%= render 'form' %>
     </div>
   </div>
