--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -44,6 +44,190 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="30" data-price="11.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/331zhJ1"><img src="https://m.media-amazon.com/images/I/71x7YL3EXSL._SR400,400_.jpg" alt="Organic Aromatherapy Essential Oil Set" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>124 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/331zhJ1">Organic Aromatherapy Essential Oil Set– 6 Bottles Aromatherapy Essential Oil Eucalyptus, Lavender, Tea Tree,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.89</span><span class="ori_price">$16.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">30RHQ9GS</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $16.99</strong> with promo code: <strong class="m_codes">30RHQ9GS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 29, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/331zhJ1">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SLZerx"><img src="https://m.media-amazon.com/images/I/61UA56cv+AL._SR400,400_.jpg" alt="Head Scratcher Pack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>60 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SLZerx">Head Scratcher Pack of 2, Scalp Massager Tool for Stress Relief (Random Colors)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$8.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">50KN8S59</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $8.99</strong> with promo code: <strong class="m_codes">50KN8S59</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 29, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SLZerx">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YvzOzw"><img src="https://m.media-amazon.com/images/I/719BCF1FpZL._SR400,400_.jpg" alt="Insulated Coffee Mug" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>84 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YvzOzw">Insulated Coffee Mug 16oz Stainless Steel Vacuum Insulated Mug with Lid and Handle(14oz After Lid is Closed) Red</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">40MUKOKO</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $19.99</strong> with promo code: <strong class="m_codes">40MUKOKO</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 05:00 AM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YvzOzw">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="75" data-price="6.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YtEHgK"><img src="https://m.media-amazon.com/images/I/51JLOqUUZ3L._SR400,400_.jpg" alt="SweatyRocks Women's Boho Wide Leg" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>18 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>75% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YtEHgK">SweatyRocks Women's Boho Wide Leg Elastic High Waist Palazzo Lounge Pants Capris</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.00</span><span class="ori_price">$23.99</span></address>
+      <textarea readonly="readonly" class="code_area">75VCCUSB</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>75% off at $23.99</strong> with promo code: <strong class="m_codes">75VCCUSB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 29, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YtEHgK">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="16.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MkRVpk"><img src="https://m.media-amazon.com/images/I/71GurwxizAL._SR400,400_.jpg" alt="Car Vacuum Cleaner" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>67 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MkRVpk">Car Vacuum Cleaner High Power Handheld Wet Dry Stronger Suction Portable Auto Vacuum Cleaner DC 12V 4000PA 16.4FT(5M) ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.00</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">60BYHN5N</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $39.99</strong> with promo code: <strong class="m_codes">60BYHN5N</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MkRVpk">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="6.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MpS6js"><img src="https://m.media-amazon.com/images/I/711pJPd7ZVL._SR400,400_.jpg" alt="Simple Drink BPA Free Metal Insulated Water Bottle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>125 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MpS6js">Simple Drink BPA Free Metal Insulated Water Bottle | Reusable Stainless Steel Flask with Portable Strong Cap ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.29</span><span class="ori_price">$12.59</span></address>
+      <textarea readonly="readonly" class="code_area">50IU7Y3B</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $12.59</strong> with promo code: <strong class="m_codes">50IU7Y3B</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MpS6js">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="4.75">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GyAX38"><img src="https://m.media-amazon.com/images/I/71e9CWSIhlL._SR400,400_.jpg" alt="Colored Pens Set" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>103 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GyAX38">Colored Pens Set, Fine Line Point Drawing Marker Pens for Writing Journaling Planner Coloring Book Sketching Taking Note Calendar...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.75</span><span class="ori_price">$9.50</span></address>
+      <textarea readonly="readonly" class="code_area">50CB17P1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $9.50</strong> with promo code: <strong class="m_codes">50CB17P1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 21, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GyAX38">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="30.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YwZpfu"><img src="https://m.media-amazon.com/images/I/71OOoMxubNL._SR400,400_.jpg" alt="Soundbar System" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>29 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YwZpfu">Soundbar System, Mugig Soundbar, Unique Split Design, Bluetooth Audio TV Speaker, 42-inch/8 Built-in Speaker/2.0>...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$30.00</span><span class="ori_price">$99.99</span></address>
+      <textarea readonly="readonly" class="code_area">70KU1PKC</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $99.99</strong> with promo code: <strong class="m_codes">70KU1PKC</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YwZpfu">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YuL6Io"><img src="https://m.media-amazon.com/images/I/71sTjOcrxPL._SR400,400_.jpg" alt="WITHARMOUR Pocket Folding Knife" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>4 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YuL6Io">WITHARMOUR Pocket Folding Knife Tactical Knife Camping Hiking Survival Fishing Knife Black B 4.75" Closed with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$25.99</span></address>
+      <textarea readonly="readonly" class="code_area">50KJ3SSX</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $25.99</strong> with promo code: <strong class="m_codes">50KJ3SSX</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YuL6Io">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="14.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MpTKl8"><img src="https://m.media-amazon.com/images/I/61+nyZSV8gL._SR400,400_.jpg" alt="Smart Wifi Plug" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>34 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MpTKl8">Smart Wifi Plug Work with Alexa Google Home IFTTT, Gosund 16A Smart Outlet Mini Socket with Overload Protection,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.24</span><span class="ori_price">$18.99</span></address>
+      <textarea readonly="readonly" class="code_area">25PLUGTAN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $18.99</strong> with promo code: <strong class="m_codes">25PLUGTAN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 29, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MpTKl8">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="45" data-price="6.24">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2YvdzOb"><img src="https://m.media-amazon.com/images/I/61Zup73IEtL._SR400,400_.jpg" alt="Lermende Dishes Gloves" /></a>
