--- a/app/views/deals/amz_prime.html.erb
+++ b/app/views/deals/amz_prime.html.erb
@@ -62,7 +62,7 @@
 
     
     </div><!--./codes-->
-    <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button>
+    <!-- <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button> -->
   </div><!--./warp-->
 </div><!--./layout-->
 <script>
