--- a/app/views/deals/sneakers01M.html.erb
+++ b/app/views/deals/sneakers01M.html.erb
@@ -641,7 +641,7 @@
 
     </div><!--./shoes-->
  
-  <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button>
+  <!-- <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button> -->
   </div><!--./warp-->
 </div><!--./layout-->
 <script>
