--- a/app/assets/stylesheets/blog.css.erb
+++ b/app/assets/stylesheets/blog.css.erb
@@ -1,6 +1,7 @@
 /*blog_03*/
 .blog_body{}
-.blogs .blog_body .blog_tit h2 .backtoshool_title{color:#ff4d4d;}
+.blogs .blog_body .blog_tit h2{text-align:center;}
+.blogs .blog_body .blog_tit h2 .backtoshool_title{color:#ff4d4d;text-align:center;}
 .blog_body .school_box{border:2px solid #ccc;margin-bottom:50px;padding:15px;}
 .blog_body .box_top{margin-top:35px;}
 .blog_body .school_box .left_side{float:left;width:30%;font-family: 'Anton', sans-serif;}
