--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -354,6 +354,20 @@
 }
 
 
+/* For Editors' Pick */
+.editors_pick{}
+.editors_pick .editors_box{float:left;width:18%;margin:0 1% 5% 1%;height:400px;}
+.editors_pick .editors_box img{width:100%;height:200px;object-fit:contain;}
+.editors_pick .editors_box .inner{padding:7px;}
+.editors_pick .editors_box .inner p{line-height:1.3;}
+.editors_pick .editors_box .inner p a{text-decoration:none;color:#000;}
+.editors_pick .editors_box .pricing{margin:10px 0;padding:7px;color:#000;}
+.editors_pick .editors_box .pricing span{font-size:15px;}
+.editors_pick .editors_box .pricing .sec_pricing{float:right;}
+.editors_pick .editors_box .pricing .sec_pricing em{background:#ff4d4d;color:#fff;padding:3px 5px;margin-left:5px;border-radius:10px;}
+.editors_pick .editors_box .pricing .sec_pricing .line_style{text-decoration:line-through;display:inline-block;font-size:13px;color:#616161;}
+.editors_pick .editors_box .btn{text-align:center;}
+.editors_pick .editors_box .btn a{background:#000;color:#fff;text-decoration:none;padding:10px;display:block;border-radius:15px;}
 
 
 
