--- a/app/views/blogs/blog_03_backtoschool.html.erb
+++ b/app/views/blogs/blog_03_backtoschool.html.erb
@@ -5,7 +5,7 @@
 
       <div class="blog_body">
 
-        <div class="blog_tit">
+        <div class="blog_tit bts_title">
           <h2>The best <span class="backtoshool_title">Back TO School</span> Deals</h2>
         </div>
 
@@ -75,7 +75,7 @@
           <div class="right_side">
             <h2><a target="_blank" href="https://bit.ly/2ydLmg6">Get up to 90% off select back-to-school items, 55% off backpacks, kids uniforms starting at $4 and more.</a></h2>
             <ul>
-              <h3>Best Categories</h3>
+              <h3>All school essentials</h3>
               <li><a target="_blank" href="https://bit.ly/2K82IR1">Girls’ clothing</a></li>
               <li><a target="_blank" href="https://bit.ly/32YkG1d">Boys’ clothing</a></li>
               <li><a target="_blank" href="https://bit.ly/30Zf1WK">School uniforms</a></li>
@@ -115,7 +115,7 @@
           <div class="right_side">
             <h2><a target="_blank" href="https://bit.ly/32UpFzH">Back to School Supplies on Sale Up to 50% Off</a></h2>
             <ul>
-              <h3>Best Categories</h3>
+              <h3>All school essentials</h3>
               <li><a target="_blank" href="https://bit.ly/2yiiof4">Back to school kid's backpacks</a></li>
               <li><a target="_blank" href="https://bit.ly/32ULY8w">Back to school the uniform shop</a></li>
               <li><a target="_blank" href="https://bit.ly/317HfPj">Back to school kid's basics</a></li>
@@ -139,7 +139,7 @@
           <div class="right_side">
             <h2><a target="_blank" href="https://bit.ly/318rojx">Save Up to 70% off designer backpacks. Visit the Kohl’s Back to School page.</a></h2>
             <ul>
-              <h3>Best Categories</h3>
+              <h3>All school essentials</h3>
               <li><a target="_blank" href="https://bit.ly/330SISy">Favorit backpacks & lunch boxes</a></li>
               <li><a target="_blank" href="https://bit.ly/337Zbeq">Favorit sneakers</a></li>
               <li><a target="_blank" href="https://bit.ly/2yi7Lcl">School Uniforms</a></li>
@@ -163,7 +163,7 @@
             <h2><a target="_blank" href="https://bit.ly/32WppQR">Back to School Clothes Sale 2019 | Get extra 20% off with code: BIG
             </a></h2>
             <ul>
-              <h3>Best Categories</h3>
+              <h3>All school essentials</h3>
               <li><a target="_blank" href="https://bit.ly/2yiko74">Accessories</a></li>
               <li><a target="_blank" href="https://bit.ly/310S7yg">Activewear</a></li>
               <li><a target="_blank" href="https://bit.ly/2KbvPmy">Backpacks</a></li>
